// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component Messages - test Messages currency USD, privacy high & mode advanced - snapshot 1`] = `
<View
  accessibilityLabel="text translated"
  accessible={true}
  style={
    {
      "display": "flex",
      "height": "100%",
      "justifyContent": "flex-start",
      "width": "100%",
    }
  }
>
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    transparent={false}
    visible={false}
  />
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#011401",
        "display": "flex",
        "paddingBottom": 0,
        "paddingTop": 10,
        "zIndex": -1,
      }
    }
    testID="header"
  >
    <View
      style={
        {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "height": 40,
          "justifyContent": "center",
          "marginHorizontal": 5,
          "marginTop": 12,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "borderColor": "#5a8c5a",
            "borderRadius": 10,
            "borderWidth": 1,
            "justifyContent": "center",
            "margin": 0,
            "marginRight": 5,
            "minHeight": 25,
            "minWidth": 25,
            "padding": 1,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "margin": 0,
              "opacity": 1,
              "padding": 0,
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <
              color="#5a8c5a"
              icon={
                {
                  "icon": [
                    640,
                    512,
                    [
                      "wifi-3",
                      "wifi-strong",
                    ],
                    "f1eb",
                    "M54.2 202.9C123.2 136.7 216.8 96 320 96s196.8 40.7 265.8 106.9c12.8 12.2 33 11.8 45.2-.9s11.8-33-.9-45.2C549.7 79.5 440.4 32 320 32S90.3 79.5 9.8 156.7C-2.9 169-3.3 189.2 8.9 202s32.5 13.2 45.2 .9zM320 256c56.8 0 108.6 21.1 148.2 56c13.3 11.7 33.5 10.4 45.2-2.8s10.4-33.5-2.8-45.2C459.8 219.2 393 192 320 192s-139.8 27.2-190.5 72c-13.3 11.7-14.5 31.9-2.8 45.2s31.9 14.5 45.2 2.8c39.5-34.9 91.3-56 148.2-56zm64 160a64 64 0 1 0 -128 0 64 64 0 1 0 128 0z",
                  ],
                  "iconName": "wifi",
                  "prefix": "fas",
                }
              }
              size={18}
            />
          </View>
        </View>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
      >
        <
          color="red"
          icon={
            {
              "icon": [
                640,
                512,
                [
                  62337,
                  "cloud-download",
                  "cloud-download-alt",
                ],
                "f0ed",
                "M144 480C64.5 480 0 415.5 0 336c0-62.8 40.2-116.2 96.2-135.9c-.1-2.7-.2-5.4-.2-8.1c0-88.4 71.6-160 160-160c59.3 0 111 32.2 138.7 80.2C409.9 102 428.3 96 448 96c53 0 96 43 96 96c0 12.2-2.3 23.8-6.4 34.6C596 238.4 640 290.1 640 352c0 70.7-57.3 128-128 128l-368 0zm79-167l80 80c9.4 9.4 24.6 9.4 33.9 0l80-80c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-39 39L344 184c0-13.3-10.7-24-24-24s-24 10.7-24 24l0 134.1-39-39c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9z",
              ],
              "iconName": "cloud-arrow-down",
              "prefix": "fas",
            }
          }
          size={20}
        />
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "margin": 0,
          "marginTop": 0,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "marginHorizontal": 5,
            "opacity": 1,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#011401",
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "center",
                "margin": 0,
                "marginHorizontal": 5,
                "minHeight": 25,
                "minWidth": 25,
                "padding": 0,
              }
            }
          >
            <
              color="#18bd18"
              icon={
                {
                  "icon": [
                    448,
                    512,
                    [
                      128274,
                    ],
                    "f023",
                    "M144 144l0 48 160 0 0-48c0-44.2-35.8-80-80-80s-80 35.8-80 80zM80 192l0-48C80 64.5 144.5 0 224 0s144 64.5 144 144l0 48 16 0c35.3 0 64 28.7 64 64l0 192c0 35.3-28.7 64-64 64L64 512c-35.3 0-64-28.7-64-64L0 256c0-35.3 28.7-64 64-64l16 0z",
                  ],
                  "iconName": "lock",
                  "prefix": "fas",
                }
              }
              size={25}
            />
          </View>
        </View>
      </View>
      <View
        style={
          {
            "flexDirection": "row",
            "margin": 5,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "flex-end",
                "flexDirection": "row",
                "margin": 0,
                "padding": 0,
              }
            }
          >
            <RNSVGSvgView
              align="xMidYMid"
              bbHeight="25.2"
              bbWidth="50.4"
              fill="#c3c3c3"
              focusable={false}
              height={25.2}
              meetOrSlice={0}
              minX={0}
              minY={0}
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  {
                    "marginBottom": 6,
                  },
                  {
                    "flex": 0,
                    "height": 25,
                    "width": 50,
                  },
                ]
              }
              vbHeight={147.85}
              vbWidth={282.84}
              width={50.4}
              xml="<?xml version="1.0" encoding="UTF-8"?>
  <svg viewBox="0 0 282.84 147.85">
    <polygon points="34.44 107.62 34.44 106.98 87.19 34.17 87.19 20.12 56.09 20.12 56.09 0 35.98 0 35.98 20.12 5.04 20.12 5.04 40.24 53.93 40.24 53.93 40.88 0 114.64 0 127.73 35.98 127.73 35.98 147.85 56.09 147.85 56.09 127.73 88.03 127.73 88.03 107.62 34.44 107.62"/>
    <polygon points="180.89 39.03 180.89 19.35 124.56 19.35 110.48 19.35 102.52 19.35 102.52 127.75 110.48 127.75 124.56 127.75 180.89 127.75 180.89 108.07 124.56 108.07 124.56 83.77 172.04 83.77 172.04 64.09 124.56 64.09 124.56 39.03 180.89 39.03"/>
    <path d="m240.92,128.87c-8.96,0-16.59-1.58-22.89-4.73-6.3-3.16-11.12-7.75-14.44-13.79-3.33-6.04-4.99-13.33-4.99-21.88v-29.75c0-8.6,1.66-15.9,4.99-21.92,3.33-6.01,8.14-10.61,14.44-13.79,6.3-3.18,13.93-4.77,22.89-4.77,7.4,0,13.99,1.47,19.75,4.4,5.77,2.93,10.54,7.18,14.32,12.75,3.78,5.57,6.4,12.33,7.85,20.28h-22.85c-.86-3.63-2.19-6.7-3.98-9.21-1.8-2.51-3.97-4.44-6.52-5.78-2.55-1.34-5.41-2.01-8.57-2.01-6.17,0-10.96,1.75-14.36,5.26-3.41,3.5-5.11,8.44-5.11,14.8v29.75c0,6.36,1.7,11.28,5.11,14.76,3.41,3.48,8.19,5.22,14.36,5.22,4.83,0,8.9-1.48,12.23-4.44,3.33-2.96,5.61-7.14,6.84-12.56h22.85c-1.5,7.9-4.14,14.65-7.93,20.24-3.78,5.59-8.54,9.85-14.28,12.79-5.74,2.93-12.31,4.4-19.71,4.4Z"/>
  </svg>"
            >
              <RNSVGGroup
                fill={
                  {
                    "payload": 4291019715,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "fill",
                  ]
                }
              >
                <RNSVGPath
                  d="M34.44 107.62 34.44 106.98 87.19 34.17 87.19 20.12 56.09 20.12 56.09 0 35.98 0 35.98 20.12 5.04 20.12 5.04 40.24 53.93 40.24 53.93 40.88 0 114.64 0 127.73 35.98 127.73 35.98 147.85 56.09 147.85 56.09 127.73 88.03 127.73 88.03 107.62 34.44 107.62z"
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                />
                <RNSVGPath
                  d="M180.89 39.03 180.89 19.35 124.56 19.35 110.48 19.35 102.52 19.35 102.52 127.75 110.48 127.75 124.56 127.75 180.89 127.75 180.89 108.07 124.56 108.07 124.56 83.77 172.04 83.77 172.04 64.09 124.56 64.09 124.56 39.03 180.89 39.03z"
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                />
                <RNSVGPath
                  d="m240.92,128.87c-8.96,0-16.59-1.58-22.89-4.73-6.3-3.16-11.12-7.75-14.44-13.79-3.33-6.04-4.99-13.33-4.99-21.88v-29.75c0-8.6,1.66-15.9,4.99-21.92,3.33-6.01,8.14-10.61,14.44-13.79,6.3-3.18,13.93-4.77,22.89-4.77,7.4,0,13.99,1.47,19.75,4.4,5.77,2.93,10.54,7.18,14.32,12.75,3.78,5.57,6.4,12.33,7.85,20.28h-22.85c-.86-3.63-2.19-6.7-3.98-9.21-1.8-2.51-3.97-4.44-6.52-5.78-2.55-1.34-5.41-2.01-8.57-2.01-6.17,0-10.96,1.75-14.36,5.26-3.41,3.5-5.11,8.44-5.11,14.8v29.75c0,6.36,1.7,11.28,5.11,14.76,3.41,3.48,8.19,5.22,14.36,5.22,4.83,0,8.9-1.48,12.23-4.44,3.33-2.96,5.61-7.14,6.84-12.56h22.85c-1.5,7.9-4.14,14.65-7.93,20.24-3.78,5.59-8.54,9.85-14.28,12.79-5.74,2.93-12.31,4.4-19.71,4.4Z"
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                />
              </RNSVGGroup>
            </RNSVGSvgView>
            <Text
              style={
                {
                  "color": "#c3c3c3",
                  "fontSize": 36,
                  "fontWeight": "700",
                  "margin": 0,
                  "padding": 0,
                }
              }
            >
               -.----
            </Text>
          </View>
        </View>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#011401",
              "borderRadius": 10,
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "center",
              "margin": 0,
              "marginLeft": 5,
              "minHeight": 25,
              "minWidth": 25,
              "padding": 0,
            }
          }
        >
          <
            color="#18bd18"
            icon={
              {
                "icon": [
                  512,
                  512,
                  [
                    "info-circle",
                  ],
                  "f05a",
                  "M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM216 336l24 0 0-64-24 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l48 0c13.3 0 24 10.7 24 24l0 88 8 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-80 0c-13.3 0-24-10.7-24-24s10.7-24 24-24zm40-208a32 32 0 1 1 0 64 32 32 0 1 1 0-64z",
                ],
                "iconName": "circle-info",
                "prefix": "fas",
              }
            }
            size={25}
          />
        </View>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "baseline",
            "flexDirection": "row",
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "baseline",
                "flexDirection": "row",
              }
            }
          >
            <Text
              style={
                {
                  "color": "#ffffff",
                  "fontSize": 20,
                  "marginBottom": 5,
                  "marginTop": 0,
                }
              }
            >
              $
            </Text>
            <Text
              style={
                {
                  "color": "#ffffff",
                  "fontSize": 20,
                  "fontWeight": "700",
                  "marginBottom": 5,
                  "marginTop": 0,
                }
              }
            >
               -.--
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "marginLeft": 5,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#011401",
                "borderRadius": 10,
                "flexDirection": "row",
                "justifyContent": "center",
                "margin": 0,
                "minHeight": 40,
                "minWidth": 40,
                "padding": 5,
              }
            }
          >
            <
              color="#18bd18"
              icon={
                {
                  "icon": [
                    512,
                    512,
                    [
                      128472,
                      "refresh",
                      "sync",
                    ],
                    "f021",
                    "M105.1 202.6c7.7-21.8 20.2-42.3 37.8-59.8c62.5-62.5 163.8-62.5 226.3 0L386.3 160 352 160c-17.7 0-32 14.3-32 32s14.3 32 32 32l111.5 0c0 0 0 0 0 0l.4 0c17.7 0 32-14.3 32-32l0-112c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 35.2L414.4 97.6c-87.5-87.5-229.3-87.5-316.8 0C73.2 122 55.6 150.7 44.8 181.4c-5.9 16.7 2.9 34.9 19.5 40.8s34.9-2.9 40.8-19.5zM39 289.3c-5 1.5-9.8 4.2-13.7 8.2c-4 4-6.7 8.8-8.1 14c-.3 1.2-.6 2.5-.8 3.8c-.3 1.7-.4 3.4-.4 5.1L16 432c0 17.7 14.3 32 32 32s32-14.3 32-32l0-35.1 17.6 17.5c0 0 0 0 0 0c87.5 87.4 229.3 87.4 316.7 0c24.4-24.4 42.1-53.1 52.9-83.8c5.9-16.7-2.9-34.9-19.5-40.8s-34.9 2.9-40.8 19.5c-7.7 21.8-20.2 42.3-37.8 59.8c-62.5 62.5-163.8 62.5-226.3 0l-.1-.1L125.6 352l34.4 0c17.7 0 32-14.3 32-32s-14.3-32-32-32L48.4 288c-1.6 0-3.2 .1-4.8 .3s-3.1 .5-4.6 1z",
                  ],
                  "iconName": "arrows-rotate",
                  "prefix": "fas",
                }
              }
              size={20}
            />
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "column",
          "flexWrap": "wrap",
          "justifyContent": "center",
        }
      }
    >
      <Text
        style={
          {
            "color": "#ffffff",
            "fontSize": 18,
            "fontWeight": "600",
            "marginBottom": 3,
            "opacity": 1,
            "paddingHorizontal": 5,
          }
        }
        testID=""
      >
        text translated
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "flex-start",
          "left": 0,
          "padding": 11.5,
          "position": "absolute",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <View
          accessibilityLabel="text translated"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "marginRight": 5,
              "opacity": 1,
            }
          }
          testID="header.drawmenu"
        >
          <
            color="#ffffff"
            icon={
              {
                "icon": [
                  448,
                  512,
                  [
                    "navicon",
                  ],
                  "f0c9",
                  "M0 96C0 78.3 14.3 64 32 64l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 128C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 288c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32L32 448c-17.7 0-32-14.3-32-32s14.3-32 32-32l384 0c17.7 0 32 14.3 32 32z",
                ],
                "iconName": "bars",
                "prefix": "fas",
              }
            }
            size={45}
          />
        </View>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "flex-end",
          "padding": 15,
          "position": "absolute",
          "right": 0,
        }
      }
    >
      <Image
        source={
          {
            "testUri": "../../../assets/img/logobig-zingo.png",
          }
        }
        style={
          {
            "borderRadius": 10,
            "height": 38,
            "resizeMode": "contain",
            "width": 38,
          }
        }
      />
    </View>
    <View
      style={
        {
          "backgroundColor": "#18bd18",
          "height": 1,
          "width": "100%",
        }
      }
    />
  </View>
  <ActivityIndicator
    color="#18bd18"
    size="large"
    style={
      {
        "marginVertical": 20,
      }
    }
  />
  <RCTScrollView
    accessibilityLabel="text translated"
    accessible={true}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onScroll={[Function]}
    refreshControl={
      <RefreshControlMock
        onRefresh={
          [MockFunction] {
            "calls": [
              [
                0,
              ],
            ],
            "results": [
              {
                "type": "return",
                "value": undefined,
              },
            ],
          }
        }
        refreshing={false}
        tintColor="#c3c3c3"
        title="text translated"
      />
    }
    scrollEventThrottle={100}
    style={
      {
        "flexGrow": 1,
        "marginTop": 10,
        "opacity": 0,
        "width": "100%",
      }
    }
  >
    <RCTRefreshControl />
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "justifyContent": "flex-start",
            "marginBottom": 10,
            "marginTop": 10,
          }
        }
      >
        <Text
          style={
            {
              "color": "#18bd18",
              "opacity": 0.65,
            }
          }
        >
          text translated
        </Text>
      </View>
      <View
        style={
          {
            "display": "flex",
            "flexDirection": "column",
            "marginHorizontal": 10,
          }
        }
        testID="valueTransferList.1"
      >
        <View
          style={
            {
              "backgroundColor": "#011401",
              "borderBottomWidth": 1,
              "borderColor": "#011401",
              "borderTopWidth": 1,
              "paddingBottom": 5,
              "paddingLeft": 15,
              "paddingTop": 5,
            }
          }
        >
          <Text
            style={
              {
                "color": "#c3c3c3",
                "opacity": 0.65,
              }
            }
          >
            Dec 2022
          </Text>
        </View>
        <View
          onPress={[Function]}
        >
          <View
            style={
              {
                "alignItems": "flex-start",
                "backgroundColor": "#233623",
                "borderBottomEndRadius": 0,
                "borderBottomStartRadius": 20,
                "borderRadius": 20,
                "display": "flex",
                "flexDirection": "column",
                "justifyContent": "flex-start",
                "marginLeft": 50,
                "marginRight": 0,
                "padding": 20,
              }
            }
          >
            <View
              style={
                {
                  "marginBottom": 10,
                  "marginLeft": 30,
                  "marginTop": -15,
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "flex-start",
                    "display": "flex",
                    "flexDirection": "row",
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "flex-start",
                      "display": "flex",
                      "flexDirection": "column",
                      "marginRight": 10,
                    }
                  }
                >
                  <View
                    accessibilityState={
                      {
                        "busy": undefined,
                        "checked": undefined,
                        "disabled": undefined,
                        "expanded": undefined,
                        "selected": undefined,
                      }
                    }
                    accessibilityValue={
                      {
                        "max": undefined,
                        "min": undefined,
                        "now": undefined,
                        "text": undefined,
                      }
                    }
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      {
                        "opacity": 1,
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "display": "flex",
                          "flexDirection": "column",
                          "flexWrap": "wrap",
                        }
                      }
                    >
                      <Text
                        style={
                          {
                            "color": "#c3c3c3",
                            "fontSize": 18,
                            "fontWeight": "600",
                            "opacity": 1,
                          }
                        }
                      >
                        sent-ad...4567890
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
            </View>
            <View
              style={
                {
                  "marginTop": 0,
                }
              }
            >
              <View
                onPress={[Function]}
              >
                <Text
                  style={
                    {
                      "color": "#c3c3c3",
                      "fontSize": 18,
                      "fontWeight": "600",
                      "opacity": 1,
                    }
                  }
                >
                  hola
  & 
hello
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row-reverse",
              }
            }
          >
            <View
              style={
                {
                  "flexDirection": "row",
                  "margin": 5,
                  "paddingRight": 5,
                }
              }
            >
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "opacity": 1,
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "flex-end",
                      "flexDirection": "row",
                      "margin": 0,
                      "padding": 0,
                    }
                  }
                >
                  <RNSVGSvgView
                    align="xMidYMid"
                    bbHeight="12"
                    bbWidth="24"
                    fill="#c3c3c3"
                    focusable={false}
                    height={12}
                    meetOrSlice={0}
                    minX={0}
                    minY={0}
                    style={
                      [
                        {
                          "backgroundColor": "transparent",
                          "borderWidth": 0,
                        },
                        {
                          "marginBottom": 0.6,
                        },
                        {
                          "flex": 0,
                          "height": 12,
                          "width": 24,
                        },
                      ]
                    }
                    vbHeight={147.85}
                    vbWidth={282.84}
                    width={24}
                    xml="<?xml version="1.0" encoding="UTF-8"?>
  <svg viewBox="0 0 282.84 147.85">
    <polygon points="34.44 107.62 34.44 106.98 87.19 34.17 87.19 20.12 56.09 20.12 56.09 0 35.98 0 35.98 20.12 5.04 20.12 5.04 40.24 53.93 40.24 53.93 40.88 0 114.64 0 127.73 35.98 127.73 35.98 147.85 56.09 147.85 56.09 127.73 88.03 127.73 88.03 107.62 34.44 107.62"/>
    <polygon points="180.89 39.03 180.89 19.35 124.56 19.35 110.48 19.35 102.52 19.35 102.52 127.75 110.48 127.75 124.56 127.75 180.89 127.75 180.89 108.07 124.56 108.07 124.56 83.77 172.04 83.77 172.04 64.09 124.56 64.09 124.56 39.03 180.89 39.03"/>
    <path d="m240.92,128.87c-8.96,0-16.59-1.58-22.89-4.73-6.3-3.16-11.12-7.75-14.44-13.79-3.33-6.04-4.99-13.33-4.99-21.88v-29.75c0-8.6,1.66-15.9,4.99-21.92,3.33-6.01,8.14-10.61,14.44-13.79,6.3-3.18,13.93-4.77,22.89-4.77,7.4,0,13.99,1.47,19.75,4.4,5.77,2.93,10.54,7.18,14.32,12.75,3.78,5.57,6.4,12.33,7.85,20.28h-22.85c-.86-3.63-2.19-6.7-3.98-9.21-1.8-2.51-3.97-4.44-6.52-5.78-2.55-1.34-5.41-2.01-8.57-2.01-6.17,0-10.96,1.75-14.36,5.26-3.41,3.5-5.11,8.44-5.11,14.8v29.75c0,6.36,1.7,11.28,5.11,14.76,3.41,3.48,8.19,5.22,14.36,5.22,4.83,0,8.9-1.48,12.23-4.44,3.33-2.96,5.61-7.14,6.84-12.56h22.85c-1.5,7.9-4.14,14.65-7.93,20.24-3.78,5.59-8.54,9.85-14.28,12.79-5.74,2.93-12.31,4.4-19.71,4.4Z"/>
  </svg>"
                  >
                    <RNSVGGroup
                      fill={
                        {
                          "payload": 4291019715,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "fill",
                        ]
                      }
                    >
                      <RNSVGPath
                        d="M34.44 107.62 34.44 106.98 87.19 34.17 87.19 20.12 56.09 20.12 56.09 0 35.98 0 35.98 20.12 5.04 20.12 5.04 40.24 53.93 40.24 53.93 40.88 0 114.64 0 127.73 35.98 127.73 35.98 147.85 56.09 147.85 56.09 127.73 88.03 127.73 88.03 107.62 34.44 107.62z"
                        fill={
                          {
                            "payload": 4278190080,
                            "type": 0,
                          }
                        }
                      />
                      <RNSVGPath
                        d="M180.89 39.03 180.89 19.35 124.56 19.35 110.48 19.35 102.52 19.35 102.52 127.75 110.48 127.75 124.56 127.75 180.89 127.75 180.89 108.07 124.56 108.07 124.56 83.77 172.04 83.77 172.04 64.09 124.56 64.09 124.56 39.03 180.89 39.03z"
                        fill={
                          {
                            "payload": 4278190080,
                            "type": 0,
                          }
                        }
                      />
                      <RNSVGPath
                        d="m240.92,128.87c-8.96,0-16.59-1.58-22.89-4.73-6.3-3.16-11.12-7.75-14.44-13.79-3.33-6.04-4.99-13.33-4.99-21.88v-29.75c0-8.6,1.66-15.9,4.99-21.92,3.33-6.01,8.14-10.61,14.44-13.79,6.3-3.18,13.93-4.77,22.89-4.77,7.4,0,13.99,1.47,19.75,4.4,5.77,2.93,10.54,7.18,14.32,12.75,3.78,5.57,6.4,12.33,7.85,20.28h-22.85c-.86-3.63-2.19-6.7-3.98-9.21-1.8-2.51-3.97-4.44-6.52-5.78-2.55-1.34-5.41-2.01-8.57-2.01-6.17,0-10.96,1.75-14.36,5.26-3.41,3.5-5.11,8.44-5.11,14.8v29.75c0,6.36,1.7,11.28,5.11,14.76,3.41,3.48,8.19,5.22,14.36,5.22,4.83,0,8.9-1.48,12.23-4.44,3.33-2.96,5.61-7.14,6.84-12.56h22.85c-1.5,7.9-4.14,14.65-7.93,20.24-3.78,5.59-8.54,9.85-14.28,12.79-5.74,2.93-12.31,4.4-19.71,4.4Z"
                        fill={
                          {
                            "payload": 4278190080,
                            "type": 0,
                          }
                        }
                      />
                    </RNSVGGroup>
                  </RNSVGSvgView>
                  <Text
                    style={
                      {
                        "color": "#c3c3c3",
                        "fontSize": 12,
                        "fontWeight": "700",
                        "margin": 0,
                        "padding": 0,
                      }
                    }
                  >
                     -.----
                  </Text>
                </View>
              </View>
            </View>
            <View>
              <Text
                style={
                  {
                    "color": "#c3c3c3",
                    "opacity": 0.65,
                  }
                }
              >
                Dec 13, 8:00 am
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "display": "flex",
            "flexDirection": "column",
            "marginHorizontal": 10,
          }
        }
        testID="valueTransferList.2"
      >
        <View
          onPress={[Function]}
        >
          <View
            style={
              {
                "alignItems": "flex-start",
                "backgroundColor": "#233623",
                "borderBottomEndRadius": 0,
                "borderBottomStartRadius": 20,
                "borderRadius": 20,
                "display": "flex",
                "flexDirection": "column",
                "justifyContent": "flex-start",
                "marginLeft": 50,
                "marginRight": 0,
                "padding": 20,
              }
            }
          >
            <View
              style={
                {
                  "marginTop": 0,
                }
              }
            >
              <View
                onPress={[Function]}
              >
                <Text
                  style={
                    {
                      "color": "#c3c3c3",
                      "fontSize": 18,
                      "fontWeight": "600",
                      "opacity": 1,
                    }
                  }
                >
                  orchard memo
sapling memo
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row-reverse",
              }
            }
          >
            <View>
              <Text
                style={
                  {
                    "color": "#c3c3c3",
                    "opacity": 0.65,
                  }
                }
              >
                Dec 13, 8:00 am
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "display": "flex",
            "flexDirection": "column",
            "marginHorizontal": 10,
          }
        }
        testID="valueTransferList.3"
      >
        <View
          onPress={[Function]}
        >
          <View
            style={
              {
                "alignItems": "flex-start",
                "backgroundColor": "#5a8c5a",
                "borderBottomEndRadius": 20,
                "borderBottomStartRadius": 0,
                "borderRadius": 20,
                "display": "flex",
                "flexDirection": "column",
                "justifyContent": "flex-start",
                "marginLeft": 0,
                "marginRight": 50,
                "padding": 20,
              }
            }
          >
            <View
              style={
                {
                  "marginTop": 0,
                }
              }
            >
              <View
                onPress={[Function]}
              >
                <Text
                  style={
                    {
                      "color": "#c3c3c3",
                      "fontSize": 18,
                      "fontWeight": "600",
                      "opacity": 1,
                    }
                  }
                >
                  hola
  & 
hello
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                {
                  "flexDirection": "row",
                  "margin": 5,
                  "paddingRight": 5,
                }
              }
            >
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "opacity": 1,
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "flex-end",
                      "flexDirection": "row",
                      "margin": 0,
                      "padding": 0,
                    }
                  }
                >
                  <RNSVGSvgView
                    align="xMidYMid"
                    bbHeight="12"
                    bbWidth="24"
                    fill="#18bd18"
                    focusable={false}
                    height={12}
                    meetOrSlice={0}
                    minX={0}
                    minY={0}
                    style={
                      [
                        {
                          "backgroundColor": "transparent",
                          "borderWidth": 0,
                        },
                        {
                          "marginBottom": 0.6,
                        },
                        {
                          "flex": 0,
                          "height": 12,
                          "width": 24,
                        },
                      ]
                    }
                    vbHeight={147.85}
                    vbWidth={282.84}
                    width={24}
                    xml="<?xml version="1.0" encoding="UTF-8"?>
  <svg viewBox="0 0 282.84 147.85">
    <polygon points="34.44 107.62 34.44 106.98 87.19 34.17 87.19 20.12 56.09 20.12 56.09 0 35.98 0 35.98 20.12 5.04 20.12 5.04 40.24 53.93 40.24 53.93 40.88 0 114.64 0 127.73 35.98 127.73 35.98 147.85 56.09 147.85 56.09 127.73 88.03 127.73 88.03 107.62 34.44 107.62"/>
    <polygon points="180.89 39.03 180.89 19.35 124.56 19.35 110.48 19.35 102.52 19.35 102.52 127.75 110.48 127.75 124.56 127.75 180.89 127.75 180.89 108.07 124.56 108.07 124.56 83.77 172.04 83.77 172.04 64.09 124.56 64.09 124.56 39.03 180.89 39.03"/>
    <path d="m240.92,128.87c-8.96,0-16.59-1.58-22.89-4.73-6.3-3.16-11.12-7.75-14.44-13.79-3.33-6.04-4.99-13.33-4.99-21.88v-29.75c0-8.6,1.66-15.9,4.99-21.92,3.33-6.01,8.14-10.61,14.44-13.79,6.3-3.18,13.93-4.77,22.89-4.77,7.4,0,13.99,1.47,19.75,4.4,5.77,2.93,10.54,7.18,14.32,12.75,3.78,5.57,6.4,12.33,7.85,20.28h-22.85c-.86-3.63-2.19-6.7-3.98-9.21-1.8-2.51-3.97-4.44-6.52-5.78-2.55-1.34-5.41-2.01-8.57-2.01-6.17,0-10.96,1.75-14.36,5.26-3.41,3.5-5.11,8.44-5.11,14.8v29.75c0,6.36,1.7,11.28,5.11,14.76,3.41,3.48,8.19,5.22,14.36,5.22,4.83,0,8.9-1.48,12.23-4.44,3.33-2.96,5.61-7.14,6.84-12.56h22.85c-1.5,7.9-4.14,14.65-7.93,20.24-3.78,5.59-8.54,9.85-14.28,12.79-5.74,2.93-12.31,4.4-19.71,4.4Z"/>
  </svg>"
                  >
                    <RNSVGGroup
                      fill={
                        {
                          "payload": 4279811352,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "fill",
                        ]
                      }
                    >
                      <RNSVGPath
                        d="M34.44 107.62 34.44 106.98 87.19 34.17 87.19 20.12 56.09 20.12 56.09 0 35.98 0 35.98 20.12 5.04 20.12 5.04 40.24 53.93 40.24 53.93 40.88 0 114.64 0 127.73 35.98 127.73 35.98 147.85 56.09 147.85 56.09 127.73 88.03 127.73 88.03 107.62 34.44 107.62z"
                        fill={
                          {
                            "payload": 4278190080,
                            "type": 0,
                          }
                        }
                      />
                      <RNSVGPath
                        d="M180.89 39.03 180.89 19.35 124.56 19.35 110.48 19.35 102.52 19.35 102.52 127.75 110.48 127.75 124.56 127.75 180.89 127.75 180.89 108.07 124.56 108.07 124.56 83.77 172.04 83.77 172.04 64.09 124.56 64.09 124.56 39.03 180.89 39.03z"
                        fill={
                          {
                            "payload": 4278190080,
                            "type": 0,
                          }
                        }
                      />
                      <RNSVGPath
                        d="m240.92,128.87c-8.96,0-16.59-1.58-22.89-4.73-6.3-3.16-11.12-7.75-14.44-13.79-3.33-6.04-4.99-13.33-4.99-21.88v-29.75c0-8.6,1.66-15.9,4.99-21.92,3.33-6.01,8.14-10.61,14.44-13.79,6.3-3.18,13.93-4.77,22.89-4.77,7.4,0,13.99,1.47,19.75,4.4,5.77,2.93,10.54,7.18,14.32,12.75,3.78,5.57,6.4,12.33,7.85,20.28h-22.85c-.86-3.63-2.19-6.7-3.98-9.21-1.8-2.51-3.97-4.44-6.52-5.78-2.55-1.34-5.41-2.01-8.57-2.01-6.17,0-10.96,1.75-14.36,5.26-3.41,3.5-5.11,8.44-5.11,14.8v29.75c0,6.36,1.7,11.28,5.11,14.76,3.41,3.48,8.19,5.22,14.36,5.22,4.83,0,8.9-1.48,12.23-4.44,3.33-2.96,5.61-7.14,6.84-12.56h22.85c-1.5,7.9-4.14,14.65-7.93,20.24-3.78,5.59-8.54,9.85-14.28,12.79-5.74,2.93-12.31,4.4-19.71,4.4Z"
                        fill={
                          {
                            "payload": 4278190080,
                            "type": 0,
                          }
                        }
                      />
                    </RNSVGGroup>
                  </RNSVGSvgView>
                  <Text
                    style={
                      {
                        "color": "#18bd18",
                        "fontSize": 12,
                        "fontWeight": "700",
                        "margin": 0,
                        "padding": 0,
                      }
                    }
                  >
                     -.----
                  </Text>
                </View>
              </View>
            </View>
            <View>
              <Text
                style={
                  {
                    "color": "#c3c3c3",
                    "opacity": 0.65,
                  }
                }
              >
                Dec 13, 8:00 am
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "marginBottom": 30,
          }
        }
      />
    </View>
  </RCTScrollView>
</View>
`;

exports[`Component Messages - test Messages no currency, privacy normal & mode basic - snapshot 1`] = `
<View
  accessibilityLabel="text translated"
  accessible={true}
  style={
    {
      "display": "flex",
      "height": "100%",
      "justifyContent": "flex-start",
      "width": "100%",
    }
  }
>
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    transparent={false}
    visible={false}
  />
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#011401",
        "display": "flex",
        "paddingBottom": 0,
        "paddingTop": 10,
        "zIndex": -1,
      }
    }
    testID="header"
  >
    <View
      style={
        {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "height": 40,
          "justifyContent": "center",
          "marginHorizontal": 5,
          "marginTop": 12,
        }
      }
    />
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "margin": 0,
          "marginTop": 0,
        }
      }
    >
      <View
        style={
          {
            "flexDirection": "row",
            "margin": 5,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": true,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "flex-end",
                "flexDirection": "row",
                "margin": 0,
                "padding": 0,
              }
            }
          >
            <RNSVGSvgView
              align="xMidYMid"
              bbHeight="25.2"
              bbWidth="50.4"
              fill="#c3c3c3"
              focusable={false}
              height={25.2}
              meetOrSlice={0}
              minX={0}
              minY={0}
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  {
                    "marginBottom": 6,
                  },
                  {
                    "flex": 0,
                    "height": 25,
                    "width": 50,
                  },
                ]
              }
              vbHeight={147.85}
              vbWidth={282.84}
              width={50.4}
              xml="<?xml version="1.0" encoding="UTF-8"?>
  <svg viewBox="0 0 282.84 147.85">
    <polygon points="34.44 107.62 34.44 106.98 87.19 34.17 87.19 20.12 56.09 20.12 56.09 0 35.98 0 35.98 20.12 5.04 20.12 5.04 40.24 53.93 40.24 53.93 40.88 0 114.64 0 127.73 35.98 127.73 35.98 147.85 56.09 147.85 56.09 127.73 88.03 127.73 88.03 107.62 34.44 107.62"/>
    <polygon points="180.89 39.03 180.89 19.35 124.56 19.35 110.48 19.35 102.52 19.35 102.52 127.75 110.48 127.75 124.56 127.75 180.89 127.75 180.89 108.07 124.56 108.07 124.56 83.77 172.04 83.77 172.04 64.09 124.56 64.09 124.56 39.03 180.89 39.03"/>
    <path d="m240.92,128.87c-8.96,0-16.59-1.58-22.89-4.73-6.3-3.16-11.12-7.75-14.44-13.79-3.33-6.04-4.99-13.33-4.99-21.88v-29.75c0-8.6,1.66-15.9,4.99-21.92,3.33-6.01,8.14-10.61,14.44-13.79,6.3-3.18,13.93-4.77,22.89-4.77,7.4,0,13.99,1.47,19.75,4.4,5.77,2.93,10.54,7.18,14.32,12.75,3.78,5.57,6.4,12.33,7.85,20.28h-22.85c-.86-3.63-2.19-6.7-3.98-9.21-1.8-2.51-3.97-4.44-6.52-5.78-2.55-1.34-5.41-2.01-8.57-2.01-6.17,0-10.96,1.75-14.36,5.26-3.41,3.5-5.11,8.44-5.11,14.8v29.75c0,6.36,1.7,11.28,5.11,14.76,3.41,3.48,8.19,5.22,14.36,5.22,4.83,0,8.9-1.48,12.23-4.44,3.33-2.96,5.61-7.14,6.84-12.56h22.85c-1.5,7.9-4.14,14.65-7.93,20.24-3.78,5.59-8.54,9.85-14.28,12.79-5.74,2.93-12.31,4.4-19.71,4.4Z"/>
  </svg>"
            >
              <RNSVGGroup
                fill={
                  {
                    "payload": 4291019715,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "fill",
                  ]
                }
              >
                <RNSVGPath
                  d="M34.44 107.62 34.44 106.98 87.19 34.17 87.19 20.12 56.09 20.12 56.09 0 35.98 0 35.98 20.12 5.04 20.12 5.04 40.24 53.93 40.24 53.93 40.88 0 114.64 0 127.73 35.98 127.73 35.98 147.85 56.09 147.85 56.09 127.73 88.03 127.73 88.03 107.62 34.44 107.62z"
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                />
                <RNSVGPath
                  d="M180.89 39.03 180.89 19.35 124.56 19.35 110.48 19.35 102.52 19.35 102.52 127.75 110.48 127.75 124.56 127.75 180.89 127.75 180.89 108.07 124.56 108.07 124.56 83.77 172.04 83.77 172.04 64.09 124.56 64.09 124.56 39.03 180.89 39.03z"
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                />
                <RNSVGPath
                  d="m240.92,128.87c-8.96,0-16.59-1.58-22.89-4.73-6.3-3.16-11.12-7.75-14.44-13.79-3.33-6.04-4.99-13.33-4.99-21.88v-29.75c0-8.6,1.66-15.9,4.99-21.92,3.33-6.01,8.14-10.61,14.44-13.79,6.3-3.18,13.93-4.77,22.89-4.77,7.4,0,13.99,1.47,19.75,4.4,5.77,2.93,10.54,7.18,14.32,12.75,3.78,5.57,6.4,12.33,7.85,20.28h-22.85c-.86-3.63-2.19-6.7-3.98-9.21-1.8-2.51-3.97-4.44-6.52-5.78-2.55-1.34-5.41-2.01-8.57-2.01-6.17,0-10.96,1.75-14.36,5.26-3.41,3.5-5.11,8.44-5.11,14.8v29.75c0,6.36,1.7,11.28,5.11,14.76,3.41,3.48,8.19,5.22,14.36,5.22,4.83,0,8.9-1.48,12.23-4.44,3.33-2.96,5.61-7.14,6.84-12.56h22.85c-1.5,7.9-4.14,14.65-7.93,20.24-3.78,5.59-8.54,9.85-14.28,12.79-5.74,2.93-12.31,4.4-19.71,4.4Z"
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                />
              </RNSVGGroup>
            </RNSVGSvgView>
            <Text
              style={
                {
                  "color": "#c3c3c3",
                  "fontSize": 36,
                  "fontWeight": "700",
                  "margin": 0,
                  "padding": 0,
                }
              }
              testID="undefined.big-part"
            >
               1.1234
            </Text>
            <Text
              style={
                {
                  "color": "#c3c3c3",
                  "fontSize": 25.2,
                  "margin": 0,
                  "marginBottom": 2.4,
                  "padding": 0,
                }
              }
              testID="undefined.small-part"
            >
              5678
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "column",
          "flexWrap": "wrap",
          "justifyContent": "center",
        }
      }
    >
      <Text
        style={
          {
            "color": "#ffffff",
            "fontSize": 18,
            "fontWeight": "600",
            "marginBottom": 3,
            "opacity": 1,
            "paddingHorizontal": 5,
          }
        }
        testID=""
      >
        text translated
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "flex-start",
          "left": 0,
          "padding": 11.5,
          "position": "absolute",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <View
          accessibilityLabel="text translated"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "marginRight": 5,
              "opacity": 1,
            }
          }
          testID="header.drawmenu"
        >
          <
            color="#ffffff"
            icon={
              {
                "icon": [
                  448,
                  512,
                  [
                    "navicon",
                  ],
                  "f0c9",
                  "M0 96C0 78.3 14.3 64 32 64l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 128C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 288c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32L32 448c-17.7 0-32-14.3-32-32s14.3-32 32-32l384 0c17.7 0 32 14.3 32 32z",
                ],
                "iconName": "bars",
                "prefix": "fas",
              }
            }
            size={45}
          />
        </View>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "flex-end",
          "padding": 15,
          "position": "absolute",
          "right": 0,
        }
      }
    >
      <Image
        source={
          {
            "testUri": "../../../assets/img/logobig-zingo.png",
          }
        }
        style={
          {
            "borderRadius": 10,
            "height": 38,
            "resizeMode": "contain",
            "width": 38,
          }
        }
      />
    </View>
    <View
      style={
        {
          "backgroundColor": "#18bd18",
          "height": 1,
          "width": "100%",
        }
      }
    />
  </View>
  <ActivityIndicator
    color="#18bd18"
    size="large"
    style={
      {
        "marginVertical": 20,
      }
    }
  />
  <RCTScrollView
    accessibilityLabel="text translated"
    accessible={true}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onScroll={[Function]}
    refreshControl={
      <RefreshControlMock
        onRefresh={[MockFunction]}
        refreshing={false}
        tintColor="#c3c3c3"
        title="text translated"
      />
    }
    scrollEventThrottle={100}
    style={
      {
        "flexGrow": 1,
        "marginTop": 10,
        "opacity": 0,
        "width": "100%",
      }
    }
  >
    <RCTRefreshControl />
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "justifyContent": "flex-start",
            "marginBottom": 10,
            "marginTop": 10,
          }
        }
      >
        <Text
          style={
            {
              "color": "#18bd18",
              "opacity": 0.65,
            }
          }
        >
          text translated
        </Text>
      </View>
      <View
        style={
          {
            "display": "flex",
            "flexDirection": "column",
            "marginHorizontal": 10,
          }
        }
        testID="valueTransferList.1"
      >
        <View
          style={
            {
              "backgroundColor": "#011401",
              "borderBottomWidth": 1,
              "borderColor": "#011401",
              "borderTopWidth": 1,
              "paddingBottom": 5,
              "paddingLeft": 15,
              "paddingTop": 5,
            }
          }
        >
          <Text
            style={
              {
                "color": "#c3c3c3",
                "opacity": 0.65,
              }
            }
          >
            Dec 2022
          </Text>
        </View>
        <View
          onPress={[Function]}
        >
          <View
            style={
              {
                "alignItems": "flex-start",
                "backgroundColor": "#233623",
                "borderBottomEndRadius": 0,
                "borderBottomStartRadius": 20,
                "borderRadius": 20,
                "display": "flex",
                "flexDirection": "column",
                "justifyContent": "flex-start",
                "marginLeft": 50,
                "marginRight": 0,
                "padding": 20,
              }
            }
          >
            <View
              style={
                {
                  "marginBottom": 10,
                  "marginLeft": 30,
                  "marginTop": -15,
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "flex-start",
                    "display": "flex",
                    "flexDirection": "row",
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "flex-start",
                      "display": "flex",
                      "flexDirection": "column",
                      "marginRight": 10,
                    }
                  }
                >
                  <View
                    accessibilityState={
                      {
                        "busy": undefined,
                        "checked": undefined,
                        "disabled": undefined,
                        "expanded": undefined,
                        "selected": undefined,
                      }
                    }
                    accessibilityValue={
                      {
                        "max": undefined,
                        "min": undefined,
                        "now": undefined,
                        "text": undefined,
                      }
                    }
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      {
                        "opacity": 1,
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "display": "flex",
                          "flexDirection": "column",
                          "flexWrap": "wrap",
                        }
                      }
                    >
                      <Text
                        style={
                          {
                            "color": "#c3c3c3",
                            "fontSize": 18,
                            "fontWeight": "600",
                            "opacity": 1,
                          }
                        }
                      >
                        sent-ad...4567890
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
            </View>
            <View
              style={
                {
                  "marginTop": 0,
                }
              }
            >
              <View
                onPress={[Function]}
              >
                <Text
                  style={
                    {
                      "color": "#c3c3c3",
                      "fontSize": 18,
                      "fontWeight": "600",
                      "opacity": 1,
                    }
                  }
                >
                  hola
  & 
hello
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row-reverse",
              }
            }
          >
            <View
              style={
                {
                  "flexDirection": "row",
                  "margin": 5,
                  "paddingRight": 5,
                }
              }
            >
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": true,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "opacity": 1,
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "flex-end",
                      "flexDirection": "row",
                      "margin": 0,
                      "padding": 0,
                    }
                  }
                >
                  <RNSVGSvgView
                    align="xMidYMid"
                    bbHeight="12"
                    bbWidth="24"
                    fill="#c3c3c3"
                    focusable={false}
                    height={12}
                    meetOrSlice={0}
                    minX={0}
                    minY={0}
                    style={
                      [
                        {
                          "backgroundColor": "transparent",
                          "borderWidth": 0,
                        },
                        {
                          "marginBottom": 0.6,
                        },
                        {
                          "flex": 0,
                          "height": 12,
                          "width": 24,
                        },
                      ]
                    }
                    vbHeight={147.85}
                    vbWidth={282.84}
                    width={24}
                    xml="<?xml version="1.0" encoding="UTF-8"?>
  <svg viewBox="0 0 282.84 147.85">
    <polygon points="34.44 107.62 34.44 106.98 87.19 34.17 87.19 20.12 56.09 20.12 56.09 0 35.98 0 35.98 20.12 5.04 20.12 5.04 40.24 53.93 40.24 53.93 40.88 0 114.64 0 127.73 35.98 127.73 35.98 147.85 56.09 147.85 56.09 127.73 88.03 127.73 88.03 107.62 34.44 107.62"/>
    <polygon points="180.89 39.03 180.89 19.35 124.56 19.35 110.48 19.35 102.52 19.35 102.52 127.75 110.48 127.75 124.56 127.75 180.89 127.75 180.89 108.07 124.56 108.07 124.56 83.77 172.04 83.77 172.04 64.09 124.56 64.09 124.56 39.03 180.89 39.03"/>
    <path d="m240.92,128.87c-8.96,0-16.59-1.58-22.89-4.73-6.3-3.16-11.12-7.75-14.44-13.79-3.33-6.04-4.99-13.33-4.99-21.88v-29.75c0-8.6,1.66-15.9,4.99-21.92,3.33-6.01,8.14-10.61,14.44-13.79,6.3-3.18,13.93-4.77,22.89-4.77,7.4,0,13.99,1.47,19.75,4.4,5.77,2.93,10.54,7.18,14.32,12.75,3.78,5.57,6.4,12.33,7.85,20.28h-22.85c-.86-3.63-2.19-6.7-3.98-9.21-1.8-2.51-3.97-4.44-6.52-5.78-2.55-1.34-5.41-2.01-8.57-2.01-6.17,0-10.96,1.75-14.36,5.26-3.41,3.5-5.11,8.44-5.11,14.8v29.75c0,6.36,1.7,11.28,5.11,14.76,3.41,3.48,8.19,5.22,14.36,5.22,4.83,0,8.9-1.48,12.23-4.44,3.33-2.96,5.61-7.14,6.84-12.56h22.85c-1.5,7.9-4.14,14.65-7.93,20.24-3.78,5.59-8.54,9.85-14.28,12.79-5.74,2.93-12.31,4.4-19.71,4.4Z"/>
  </svg>"
                  >
                    <RNSVGGroup
                      fill={
                        {
                          "payload": 4291019715,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "fill",
                        ]
                      }
                    >
                      <RNSVGPath
                        d="M34.44 107.62 34.44 106.98 87.19 34.17 87.19 20.12 56.09 20.12 56.09 0 35.98 0 35.98 20.12 5.04 20.12 5.04 40.24 53.93 40.24 53.93 40.88 0 114.64 0 127.73 35.98 127.73 35.98 147.85 56.09 147.85 56.09 127.73 88.03 127.73 88.03 107.62 34.44 107.62z"
                        fill={
                          {
                            "payload": 4278190080,
                            "type": 0,
                          }
                        }
                      />
                      <RNSVGPath
                        d="M180.89 39.03 180.89 19.35 124.56 19.35 110.48 19.35 102.52 19.35 102.52 127.75 110.48 127.75 124.56 127.75 180.89 127.75 180.89 108.07 124.56 108.07 124.56 83.77 172.04 83.77 172.04 64.09 124.56 64.09 124.56 39.03 180.89 39.03z"
                        fill={
                          {
                            "payload": 4278190080,
                            "type": 0,
                          }
                        }
                      />
                      <RNSVGPath
                        d="m240.92,128.87c-8.96,0-16.59-1.58-22.89-4.73-6.3-3.16-11.12-7.75-14.44-13.79-3.33-6.04-4.99-13.33-4.99-21.88v-29.75c0-8.6,1.66-15.9,4.99-21.92,3.33-6.01,8.14-10.61,14.44-13.79,6.3-3.18,13.93-4.77,22.89-4.77,7.4,0,13.99,1.47,19.75,4.4,5.77,2.93,10.54,7.18,14.32,12.75,3.78,5.57,6.4,12.33,7.85,20.28h-22.85c-.86-3.63-2.19-6.7-3.98-9.21-1.8-2.51-3.97-4.44-6.52-5.78-2.55-1.34-5.41-2.01-8.57-2.01-6.17,0-10.96,1.75-14.36,5.26-3.41,3.5-5.11,8.44-5.11,14.8v29.75c0,6.36,1.7,11.28,5.11,14.76,3.41,3.48,8.19,5.22,14.36,5.22,4.83,0,8.9-1.48,12.23-4.44,3.33-2.96,5.61-7.14,6.84-12.56h22.85c-1.5,7.9-4.14,14.65-7.93,20.24-3.78,5.59-8.54,9.85-14.28,12.79-5.74,2.93-12.31,4.4-19.71,4.4Z"
                        fill={
                          {
                            "payload": 4278190080,
                            "type": 0,
                          }
                        }
                      />
                    </RNSVGGroup>
                  </RNSVGSvgView>
                  <Text
                    style={
                      {
                        "color": "#c3c3c3",
                        "fontSize": 12,
                        "fontWeight": "700",
                        "margin": 0,
                        "padding": 0,
                      }
                    }
                    testID="undefined.big-part"
                  >
                     0.1234
                  </Text>
                  <Text
                    style={
                      {
                        "color": "#c3c3c3",
                        "fontSize": 8.399999999999999,
                        "margin": 0,
                        "marginBottom": 0.8,
                        "padding": 0,
                      }
                    }
                    testID="undefined.small-part"
                  >
                    5678
                  </Text>
                </View>
              </View>
            </View>
            <View>
              <Text
                style={
                  {
                    "color": "#c3c3c3",
                    "opacity": 0.65,
                  }
                }
              >
                Dec 13, 8:00 am
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "display": "flex",
            "flexDirection": "column",
            "marginHorizontal": 10,
          }
        }
        testID="valueTransferList.2"
      >
        <View
          onPress={[Function]}
        >
          <View
            style={
              {
                "alignItems": "flex-start",
                "backgroundColor": "#233623",
                "borderBottomEndRadius": 0,
                "borderBottomStartRadius": 20,
                "borderRadius": 20,
                "display": "flex",
                "flexDirection": "column",
                "justifyContent": "flex-start",
                "marginLeft": 50,
                "marginRight": 0,
                "padding": 20,
              }
            }
          >
            <View
              style={
                {
                  "marginTop": 0,
                }
              }
            >
              <View
                onPress={[Function]}
              >
                <Text
                  style={
                    {
                      "color": "#c3c3c3",
                      "fontSize": 18,
                      "fontWeight": "600",
                      "opacity": 1,
                    }
                  }
                >
                  orchard memo
sapling memo
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row-reverse",
              }
            }
          >
            <View>
              <Text
                style={
                  {
                    "color": "#c3c3c3",
                    "opacity": 0.65,
                  }
                }
              >
                Dec 13, 8:00 am
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "display": "flex",
            "flexDirection": "column",
            "marginHorizontal": 10,
          }
        }
        testID="valueTransferList.3"
      >
        <View
          onPress={[Function]}
        >
          <View
            style={
              {
                "alignItems": "flex-start",
                "backgroundColor": "#5a8c5a",
                "borderBottomEndRadius": 20,
                "borderBottomStartRadius": 0,
                "borderRadius": 20,
                "display": "flex",
                "flexDirection": "column",
                "justifyContent": "flex-start",
                "marginLeft": 0,
                "marginRight": 50,
                "padding": 20,
              }
            }
          >
            <View
              style={
                {
                  "marginTop": 0,
                }
              }
            >
              <View
                onPress={[Function]}
              >
                <Text
                  style={
                    {
                      "color": "#c3c3c3",
                      "fontSize": 18,
                      "fontWeight": "600",
                      "opacity": 1,
                    }
                  }
                >
                  hola
  & 
hello
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                {
                  "flexDirection": "row",
                  "margin": 5,
                  "paddingRight": 5,
                }
              }
            >
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": true,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "opacity": 1,
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "flex-end",
                      "flexDirection": "row",
                      "margin": 0,
                      "padding": 0,
                    }
                  }
                >
                  <RNSVGSvgView
                    align="xMidYMid"
                    bbHeight="12"
                    bbWidth="24"
                    fill="#18bd18"
                    focusable={false}
                    height={12}
                    meetOrSlice={0}
                    minX={0}
                    minY={0}
                    style={
                      [
                        {
                          "backgroundColor": "transparent",
                          "borderWidth": 0,
                        },
                        {
                          "marginBottom": 0.6,
                        },
                        {
                          "flex": 0,
                          "height": 12,
                          "width": 24,
                        },
                      ]
                    }
                    vbHeight={147.85}
                    vbWidth={282.84}
                    width={24}
                    xml="<?xml version="1.0" encoding="UTF-8"?>
  <svg viewBox="0 0 282.84 147.85">
    <polygon points="34.44 107.62 34.44 106.98 87.19 34.17 87.19 20.12 56.09 20.12 56.09 0 35.98 0 35.98 20.12 5.04 20.12 5.04 40.24 53.93 40.24 53.93 40.88 0 114.64 0 127.73 35.98 127.73 35.98 147.85 56.09 147.85 56.09 127.73 88.03 127.73 88.03 107.62 34.44 107.62"/>
    <polygon points="180.89 39.03 180.89 19.35 124.56 19.35 110.48 19.35 102.52 19.35 102.52 127.75 110.48 127.75 124.56 127.75 180.89 127.75 180.89 108.07 124.56 108.07 124.56 83.77 172.04 83.77 172.04 64.09 124.56 64.09 124.56 39.03 180.89 39.03"/>
    <path d="m240.92,128.87c-8.96,0-16.59-1.58-22.89-4.73-6.3-3.16-11.12-7.75-14.44-13.79-3.33-6.04-4.99-13.33-4.99-21.88v-29.75c0-8.6,1.66-15.9,4.99-21.92,3.33-6.01,8.14-10.61,14.44-13.79,6.3-3.18,13.93-4.77,22.89-4.77,7.4,0,13.99,1.47,19.75,4.4,5.77,2.93,10.54,7.18,14.32,12.75,3.78,5.57,6.4,12.33,7.85,20.28h-22.85c-.86-3.63-2.19-6.7-3.98-9.21-1.8-2.51-3.97-4.44-6.52-5.78-2.55-1.34-5.41-2.01-8.57-2.01-6.17,0-10.96,1.75-14.36,5.26-3.41,3.5-5.11,8.44-5.11,14.8v29.75c0,6.36,1.7,11.28,5.11,14.76,3.41,3.48,8.19,5.22,14.36,5.22,4.83,0,8.9-1.48,12.23-4.44,3.33-2.96,5.61-7.14,6.84-12.56h22.85c-1.5,7.9-4.14,14.65-7.93,20.24-3.78,5.59-8.54,9.85-14.28,12.79-5.74,2.93-12.31,4.4-19.71,4.4Z"/>
  </svg>"
                  >
                    <RNSVGGroup
                      fill={
                        {
                          "payload": 4279811352,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "fill",
                        ]
                      }
                    >
                      <RNSVGPath
                        d="M34.44 107.62 34.44 106.98 87.19 34.17 87.19 20.12 56.09 20.12 56.09 0 35.98 0 35.98 20.12 5.04 20.12 5.04 40.24 53.93 40.24 53.93 40.88 0 114.64 0 127.73 35.98 127.73 35.98 147.85 56.09 147.85 56.09 127.73 88.03 127.73 88.03 107.62 34.44 107.62z"
                        fill={
                          {
                            "payload": 4278190080,
                            "type": 0,
                          }
                        }
                      />
                      <RNSVGPath
                        d="M180.89 39.03 180.89 19.35 124.56 19.35 110.48 19.35 102.52 19.35 102.52 127.75 110.48 127.75 124.56 127.75 180.89 127.75 180.89 108.07 124.56 108.07 124.56 83.77 172.04 83.77 172.04 64.09 124.56 64.09 124.56 39.03 180.89 39.03z"
                        fill={
                          {
                            "payload": 4278190080,
                            "type": 0,
                          }
                        }
                      />
                      <RNSVGPath
                        d="m240.92,128.87c-8.96,0-16.59-1.58-22.89-4.73-6.3-3.16-11.12-7.75-14.44-13.79-3.33-6.04-4.99-13.33-4.99-21.88v-29.75c0-8.6,1.66-15.9,4.99-21.92,3.33-6.01,8.14-10.61,14.44-13.79,6.3-3.18,13.93-4.77,22.89-4.77,7.4,0,13.99,1.47,19.75,4.4,5.77,2.93,10.54,7.18,14.32,12.75,3.78,5.57,6.4,12.33,7.85,20.28h-22.85c-.86-3.63-2.19-6.7-3.98-9.21-1.8-2.51-3.97-4.44-6.52-5.78-2.55-1.34-5.41-2.01-8.57-2.01-6.17,0-10.96,1.75-14.36,5.26-3.41,3.5-5.11,8.44-5.11,14.8v29.75c0,6.36,1.7,11.28,5.11,14.76,3.41,3.48,8.19,5.22,14.36,5.22,4.83,0,8.9-1.48,12.23-4.44,3.33-2.96,5.61-7.14,6.84-12.56h22.85c-1.5,7.9-4.14,14.65-7.93,20.24-3.78,5.59-8.54,9.85-14.28,12.79-5.74,2.93-12.31,4.4-19.71,4.4Z"
                        fill={
                          {
                            "payload": 4278190080,
                            "type": 0,
                          }
                        }
                      />
                    </RNSVGGroup>
                  </RNSVGSvgView>
                  <Text
                    style={
                      {
                        "color": "#18bd18",
                        "fontSize": 12,
                        "fontWeight": "700",
                        "margin": 0,
                        "padding": 0,
                      }
                    }
                    testID="undefined.big-part"
                  >
                     0.7765
                  </Text>
                  <Text
                    style={
                      {
                        "color": "#18bd18",
                        "fontSize": 8.399999999999999,
                        "margin": 0,
                        "marginBottom": 0.8,
                        "padding": 0,
                      }
                    }
                    testID="undefined.small-part"
                  >
                    4321
                  </Text>
                </View>
              </View>
            </View>
            <View>
              <Text
                style={
                  {
                    "color": "#c3c3c3",
                    "opacity": 0.65,
                  }
                }
              >
                Dec 13, 8:00 am
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "marginBottom": 30,
          }
        }
      />
    </View>
  </RCTScrollView>
</View>
`;
